# vaultsign

./: Cargo.toml  Makefile  README.org  shell.nix  todo.org
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
hack/: acceptance_test.bash
nix/: rust.nix  sources.json
src/: main.rs  vault.rs
